--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -84,7 +84,7 @@
                     <button type="button" class="search_button" onclick="location.href='serach_for_a_ride.html'">Search for a ride</button>
                   </div>
                 </div>
-                <div class="col-1"></div>
+                <div class="col-10"></div>
               </div>
             </form>
           </div>
@@ -169,21 +169,21 @@
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Question 2: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">Is registration needed to be able to avail the ride sharing service?</a1>
                 </div>
                 <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
                   <div class="card-body">
-                      Answer 2: To be updated soon.
+                      <strong>Yes</strong>, a user should register first to be able to book a shared ride.
                   </div>
                 </div>
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">Question 3: None yet. <span style="weight: bold;">To be updated soon.</span></a1>
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">When will NSCC ride sharing be available for students?</a1>
                 </div>
                 <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                   <div class="card-body">
-                    Answer 3: To be updated soon.
+                    An ongoing project has already been started and its timeline will soon be posted. Beta version of the web application is currently ongoing.
                   </div>
                 </div>
               </div>
@@ -194,7 +194,7 @@
         <section id="safety">
           <div class="container mt-3 p-5 my-5 border">
             <h3>Safety</h3>
-            <p1>Great travel experience for NSCC students is our core process and in line with this is the <strong>SAFETY</strong> of everyone as our top priority.</p1>
+            <p1>Convenient travel experience for NSCC students is our core process while we priorize <strong>SAFETY</strong>.</p1>
           </div>
         </section>     
         <!-- Footer -->
@@ -208,7 +208,7 @@
                 <a href="" class="faqs_footer">FAQs</a> |
                 <a href="" class="safety_footer">Safety</a> 
               </div>
-              <div class="container">
+              <div class="container-fluid" id="section2">
                 <a href="" class="terms_and_conditions">Terms and Conditions</a> |
                 <a href="" class="about">About NSCC Ride Share</a> |
                 <a href="" class="contact_us">Contact us</a> 
@@ -218,17 +218,17 @@
               <div class="row">
                 <div class="col-2"></div>
                 <div id="div_socials" class="col-8">
-                  <a href="#" class="twitter"><img src="../RideShareSite/images/twitter.gray.png" alt="Twitter" class="twitter"></a>
-                  <a href="#" class="instagram"><img src="../RideShareSite/images/ig.gray.png" alt="Instagram" class="instagram"></a>
-                  <a href="#" class="facebook"><img src="../RideShareSite/images/fb.gray.png" alt="Facebook" class="facebook"></a>
-                  <a href="#" class="skype"><img src="../RideShareSite/images/skype.gray.png" alt="Skype" class="skype"></a>
-                  <a href="#" class="whatsapp"><img src="../RideShareSite/images/whatsup.gray.png" alt="Whatsapp" class="whatsapp"></a>
+                  <a href="#" class="twitter_socials"><img src="../RideShareSite/images/twitter.gray.png" alt="Twitter" class="twitter"></a>
+                  <a href="#" class="instagram_socials"><img src="../RideShareSite/images/ig.gray.png" alt="Instagram" class="instagram"></a>
+                  <a href="#" class="facebook_socials"><img src="../RideShareSite/images/fb.gray.png" alt="Facebook" class="facebook"></a>
+                  <a href="#" class="skype_socials"><img src="../RideShareSite/images/skype.gray.png" alt="Skype" class="skype"></a>
+                  <a href="#" class="whatsapp_socials"><img src="../RideShareSite/images/whatsup.gray.png" alt="Whatsapp" class="whatsapp"></a>
                 </div>
                 <div class="col-2"></div>
               </div>
             </div>
             <div id="footer3">
-              <p>© 2023 Johnjie Alzate</p>
+              <p>Copyright © 2023 Johnjie Alzate</p>
             </div>
           </div>
         </footer>
