--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -42,7 +42,7 @@
           </div>
           <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="">Home</a>
                 </li>
@@ -209,7 +209,7 @@
                 <a href="" class="safety_footer">Safety</a> 
               </div>
               <div class="container-fluid" id="section2">
-                <a href="" class="terms_and_conditions">Terms and Conditions</a> |
+                <a href="" class="terms_and_conditions">Terms of Use</a> |
                 <a href="" class="about">About NSCC Ride Share</a> |
                 <a href="" class="contact_us">Contact us</a> 
               </div>
