--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -128,7 +128,7 @@
             <h3>Testimonials</h3>
               <div class="container_testimonial">
                 <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
-                <p1><span>Jellie Perez Fox.</span> IT Generalist Student.</p1>
+                <p1><span>Jellie Perez.</span> IT Generalist Student.</p1>
                 <p1>I saved a lot. I was able to help reduce the carbon footprint.</p1>
               </div>
               <div class="container_testimonial">
