--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -133,7 +133,7 @@
               </div>
               <div class="container_testimonial">
                 <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
-                <p1><span>Najh Tiango Go.</span> IT Generalist Student.</p1>
+                <p1><span>Nahj Tiango Go.</span> IT Generalist Student.</p1>
                 <p1>Had an amazing ride!</p1>
               </div>
               <div class="container_testimonial">
