--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -138,7 +138,7 @@
               </div>
               <div class="container_testimonial">
                 <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
-                <p1><span>Ria Corpus</span> NSCC Student.</p1>
+                <p1><span>Ria Corpus.</span> NSCC Student.</p1>
                 <p1>Cool service.</p>
               </div>
               <div class="container_testimonial">
