--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -128,23 +128,23 @@
             <h3>Testimonials</h3>
               <div class="container_testimonial">
                 <img src="../RideShareSite/images/boy.png" alt="boy" style="width:100px">
-                <p1><span>John Fox.</span> IT Generalist Student.</p1>
-                <p1>I saved a lot. I was able to help reduce the carbon footprint.</p1>
+                <p1><span>Jellie Perez.</span> IT Generalist Student.</p1>
+                <div><p1>I saved a lot. I was able to help reduce the carbon footprint.</p1></div>
               </div>
               <div class="container_testimonial">
                 <img src="../RideShareSite/images/girl.png" alt="girl" style="width:100px">
-                <p1><span>Haley Tan.</span> IT Generalist Student.</p1>
-                <p1>Had an amazing ride!</p1>
+                <p1><span>Nahj Tiango Go.</span> IT Generalist Student.</p1>
+                <div><p1>Had an amazing ride!</p1></div>
               </div>
               <div class="container_testimonial">
                 <img src="../RideShareSite/images/man.png" alt="man" style="width:100px">
-                <p1><span>Anonymous Member.</span> NSCC Student.</p1>
-                <p1>Cool service.</p>
+                <p1><span>Ria Corpus.</span> NSCC Student.</p1>
+                <div><p1>Cool service.</p></div>
               </div>
               <div class="container_testimonial">
                 <img src="../RideShareSite/images//woman.png" alt="woman" style="width:100px">
-                <p1><span>Teddy Wewers.</span> Faculty.</p1>
-                <p1>A great way to create a student community!</p1>
+                <p1><span>Rowena Pope Wewers.</span> Faculty.</p1>
+                <div><p1>A great way to create a student community!</p1></div>
               </div>
           </div>
         </section>
