--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -82,6 +82,7 @@
                   </div>
                   <div id="form">
                     <button type="button" class="search_button" onclick="location.href='serach_for_a_ride.html'">Search for a ride</button>
+                    <button type="button" class="search_button" onclick="location.href='search_for_a_ride.html'">Offer a ride</button>
                   </div>
                 </div>
                 <div class="col-10"></div>
