--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -201,6 +201,7 @@
           <div class="container mt-3 p-5 my-5 border">
             <h3>Safety</h3>
             <p1>Convenient travel experience for NSCC students is our core process while we priorize <strong>SAFETY</strong>.</p1>
+            <p1>We at NSCC strive to offer transportation solution to students that is convenient and safe while we create a health community for all its members. We are fully committed to safety and ensure that our ride sharing service complies to Nova Scotia's provincial guideline for drivers and riders. Before anyone can drive and offer a ride, NSCC shall conduct multi-step safety screening. A guidiline can be checked upon signup. Privacy of the members are as vital as safety. All information shared in this portal are kept private. You may also visit our privacy policy for your reference.</p1>
           </div>
         </section>     
         <!-- Footer -->
