--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -185,7 +185,7 @@
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">When will NSCC ride sharing be available for students?</a1>
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">When will NSCC ride sharing be available to students?</a1>
                 </div>
                 <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                   <div class="card-body">
