--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -82,6 +82,7 @@
                   </div>
                   <div id="form">
                     <button type="button" class="search_button" onclick="location.href='serach_for_a_ride.html'">Search for a ride</button>
+                    <button type="button" class="search_button" onclick="location.href='search_for_a_ride.html'">Offer a ride</button>
                   </div>
                 </div>
                 <div class="col-10"></div>
@@ -184,7 +185,7 @@
               </div>
               <div class="card">
                 <div class="card-header">
-                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">When will NSCC ride sharing be available for students?</a1>
+                  <a1 class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">When will NSCC ride sharing be available to students?</a1>
                 </div>
                 <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
                   <div class="card-body">
@@ -200,6 +201,9 @@
           <div class="container mt-3 p-5 my-5 border">
             <h3>Safety</h3>
             <p1>Convenient travel experience for NSCC students is our core process while we priorize <strong>SAFETY</strong>.</p1>
+            <div>
+            <p1>We at NSCC strive to offer transportation solution to students that is convenient and safe while we create a healthy community for all its members. We are fully committed to safety and ensure that our ride sharing service complies to Nova Scotia's provincial guideline for drivers and riders. Before anyone can drive and offer a ride, NSCC shall conduct multi-step safety screening. Complete guideline can be checked upon signup. Privacy of the members is as vital as safety. All information shared in this portal are kept private. You may also visit our privacy policy for your reference.</p1>
+            </div>    
           </div>
         </section>     
         <!-- Footer -->
