--- a/RideShareSite/W0474627_WEBD1000_Ride_Share.html
+++ b/RideShareSite/W0474627_WEBD1000_Ride_Share.html
@@ -212,7 +212,7 @@
             <nav class="sitemap">
               <div class="container-fluid" id="section1">
                 <a href="#hero" class="need_a_ride_footer">Need a Ride</a> |
-                <a href="" class="give_a_ride_footer">Give a Ride</a> |
+                <a href="#hero" class="give_a_ride_footer">Give a Ride</a> |
                 <a href="#testimonies" class="testimonies_footer">Testimonies</a> |
                 <a href="#faqs" class="faqs_footer">FAQs</a> |
                 <a href="#safety" class="safety_footer">Safety</a> 
