--- a/TheFlickPoet/TFPHomePage.html
+++ b/TheFlickPoet/TFPHomePage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>The Flick PPoet</title>
+        <title>The Flick Poet</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="=width=device-width" intial-scale="1.0">
         <link rel="stylesheet" href="style.css">
@@ -11,33 +11,35 @@
         <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
     </head>
     <body>
-        <head><div class="head"></div></head>
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container-fluid">
-                <a>The Flick Poet</a>
-                <div id="nav">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                        <a class="nav-link" href="">Home</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="">About</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="">Contact</a>
-                        </li>  
-                    </ul>
-                    </div>
+        <header>
+            <div class="head"></div>
+        </header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+            <a>The Flick Poet</a>
+            <div id="nav">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="falsae" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link" href="">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="">About</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="">Contact</a>
+                    </li>  
+                </ul>
                 </div>
-                </div>
-            </nav>
+            </div>
+            </div>
+        </nav>
         <section class="hero">
             <div class="hero-content">         
                 <h2 class="hero-title">The Flick Poet</h2> 
@@ -46,7 +48,7 @@
                 <button type="button" class="hero-button" onclick="location.href='contact_us.html'">Contact us</button>
             </div> 
         </Section>
-              <!-- Drivers and Riders Section -->
+        <!-- About -->
         <section class="drivers-riders">
             <div class="container p-5 my-5 border">
                 <h3>Become a Driver</h3>
