--- a/PersonalPortfolio/index.html
+++ b/PersonalPortfolio/index.html
@@ -78,7 +78,7 @@
                 <nav>
                     <div class="container-fluid" id="section1">
                     <a href="" class="johnjie_alzate">Johnjie Alzate</a> |
-                    <a href="" class="email">jma_ece@yahoo.com</a> |
+                    <a href=mailto:jma_ece@yahoo.com' class="email">Send email</a> |
                     <a href='https://github.com/johnjiealzate' class="_contact">GitHub</a> |
                     <a href='https://www.linkedin.com/in/johnjie-alzate-23b386b6/?originalSubdomain=ca' class="linkedin">LinkedIn</a>
                     </div>
