--- a/PersonalPortfolio/index.html
+++ b/PersonalPortfolio/index.html
@@ -3,12 +3,12 @@
     <head>
         <title>Johnjie Alzate</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="=width=device-width" intial-scale="1.0">
+        <meta name="viewport" content="width=device-width, intial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <!-- Boostrap CSS link-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <!-- Boostrap JS -->
-        <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
+        <!-- Bootstrap CSS link-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap JS link-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         <header>
@@ -17,17 +17,17 @@
             </div>
         </header>
         <!-- Navigation Bar-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-none">
-          <div class="container-fluid" href="">
+        <nav class="navbar navbar-expand-sm navbar-light bg-none">
+          <div class="container-fluid">
             <a href="" class="navbar-brand">
-              <img src="../PersonalPortfolio/images/jma.png" alt="NSCClogo" style="width: 90px;">
+              <img src="../PersonalPortfolio/images/jma.png" alt="jma_logo" style="width: 90px;">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="=navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavcollapsible" aria-controls="=navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
           </div>
           <div class="container-fluid">
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNavcollapsible">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                   <a class="nav-link" href="#home">Home</a>
@@ -36,8 +36,8 @@
                   <a class="nav-link" href="#about_me">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                  </li>
+                  <a class="nav-link" href="#contact">Contact</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -71,14 +71,15 @@
             <div class="container p-5 my-5 border">
                 <h3>Contact</h3>
                 <p>You can reach me at my <a href="#footer" class="social_media_accounts">social media accounts</a>.</p>    
-            </div>    
+            </div>
+        </section>    
         <!-- Footer -->
         <footer id="footer">
             <div id="footer">
                 <nav>
                     <div class="container-fluid" id="section1">
                     <a href="" class="johnjie_alzate">Johnjie Alzate</a> |
-                    <a href="" class="email">jma_ece@yahoo.com</a> |
+                    <a href='mailto:jma_ece@yahoo.com' class="email">Send email</a> |
                     <a href='https://github.com/johnjiealzate' class="_contact">GitHub</a> |
                     <a href='https://www.linkedin.com/in/johnjie-alzate-23b386b6/?originalSubdomain=ca' class="linkedin">LinkedIn</a>
                     </div>
