--- a/myfirstcss/HTML_Sample_Code.html
+++ b/myfirstcss/HTML_Sample_Code.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head><title>Index</title>
-    <link rel="stylesheet" href="styling.css">
+        <link rel="stylesheet" href="styling.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 
     <body>
         <header>
             <h1>Johnjie Alzate</h1>
             <h2>IT Generalist</h2>
-            <nav>
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT ME</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Logo</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                      </li>    
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </header>
         <main>
             <section>
@@ -27,8 +45,9 @@
                 </p1>
 
             </section>
-
+            
         </main>
+
     </body>
 
     <footer>
@@ -41,4 +60,5 @@
             <img src="..//myfirstcss/images/icons8-skype.svg" alt="twitter" style="width: 20px;">
         </h5>
     </footer>
+
 </html>
