--- a/TheFlickPoet/TFPHomePage.html
+++ b/TheFlickPoet/TFPHomePage.html
@@ -3,12 +3,11 @@
     <head>
         <title>The Flick Poet</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="=width=device-width" intial-scale="1.0">
+        <meta name="viewport" content="width=device-width. intial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <!-- Boostrap CSS link-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-        <!-- Boostrap JS -->
-        <script src="https://cdn.jsdelvr.net/npm/bootstrap@5.3.0/dist/js/boostrap.bundle.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>
     <body>
         <header>
@@ -22,20 +21,20 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                    <a class="nav-link" href="">Home</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="">About</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="">Contact</a>
-                    </li>  
-                </ul>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Contact</a>
+                        </li>  
+                    </ul>
                 </div>
             </div>
             </div>
