--- a/TheFlickPoet/TFPHomePage.html
+++ b/TheFlickPoet/TFPHomePage.html
@@ -47,30 +47,22 @@
             </div> 
         </Section>
         <!-- About -->
-        <section class="drivers-riders">
+        <section class="portfolio">
             <div class="container p-5 my-5 border">
-                <h3>Become a Driver</h3>
-                <p>How it works
-                    Here’s what you need to know before getting started with the navbar:
-                    
-                    Navbars require a wrapping .navbar with .navbar-expand{-sm|-md|-lg|-xl|-xxl} for responsive collapsing and color scheme classes.
-                    Navbars and their contents are fluid by default. Change the container to limit their horizontal width in different ways.
-                    Use our spacing and flex utility classes for controlling spacing and alignment within navbars.
-                    Navbars are responsive by default, but you can easily modify them to change that. Responsive behavior depends on our Collapse JavaScript plugin.
-                    Ensure accessibility by using a element or, if using a more generic element such as a div add a role="navigation" to every navbar to explicitly identify it as a landmark region for users of assistive technologies.
-                    Indicate the current item by using aria-current="page" for the current page or aria-current="true" for the current item in a set.</p>
+                <h3>Portfolio</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
             </div>
         </section>
         <!-- Testimonials -->
-        <section class="testimonies">
+        <section class="about">
             <div class="container p-5 my-5 border">
-            <h3>Testimonials</h3>
+            <h3>About</h3>
             </div>
         </section>
         <!-- FAQs Section -->
-        <section class="faqs">
+        <section class="contact">
             <div class="container mt-3 p-5 my-5 border">
-                <h3>Frequenctly Asked Questions</h3>
+                <h3>Contact Us</h3>
         </section>     
         <!-- Footer -->
         <footer>
