--- a/TheFlickPoet/TFPHomePage.html
+++ b/TheFlickPoet/TFPHomePage.html
@@ -28,7 +28,7 @@
                             <a class="nav-link" href="">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">About</a>
+                            <a href="#about"class="nav-link" href="">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="">Contact</a>
@@ -54,7 +54,7 @@
             </div>
         </section>
         <!-- Testimonials -->
-        <section class="about">
+        <section id="about" class="about">
             <div class="container p-5 my-5 border">
             <h3>About</h3>
             </div>
@@ -66,7 +66,7 @@
         </section>     
         <!-- Footer -->
         <footer>
-            <div class="container_footer">
+            <div id="footer" class="container_footer">
             <p>© 2023 Johnjie Alzate</p>
             </div>
         </footer>
