--- a/TheFlickPoet/TFPHomePage.html
+++ b/TheFlickPoet/TFPHomePage.html
@@ -31,7 +31,7 @@
                             <a href="#about" class="nav-link" href="">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Contact</a>
+                            <a href="#contact" class="nav-link" href="">Contact</a>
                         </li>  
                     </ul>
                 </div>
@@ -60,7 +60,7 @@
             </div>
         </section>
         <!-- FAQs Section -->
-        <section class="contact">
+        <section id="contact" class="contact">
             <div class="container mt-3 p-5 my-5 border">
                 <h3>Contact Us</h3>
         </section>     
